--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,7 @@ $orange: #ffa94d;
 $dark-orange: #f76707;
 $light-red: #ffc9c9;
 $red: #ff6b6b;
+$violet: #845ef7;
 $light-yellow: #ffec99;
 
 $brand-1: $orange;
